--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
+        "predis/predis": "^1.1",
         "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
@@ -43,6 +44,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/Http/helpers.php"
         ]
     },
     "autoload-dev": {
